[package]
name = "ppg"
version = "0.1.0"
authors = ["Nathaniel Knight <nathaniel.ep@gmail.com>"]
edition = "2018"
description = "A command-line passphrase generator."
license = "MPL-2.0"
repository = "https://bitbucket.org/nathanielknight/ppg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"