[package]
name = "ppg"
version = "0.4.0"
authors = ["Nathaniel Knight <nathaniel.ep@gmail.com>"]
edition = "2018"
description = "A command-line passphrase generator."
license = "MPL-2.0"
repository = "https://github.com/nathanielknight/prettygood-passphrase-generator"


[lib]
name = "ppg"
path = "src/lib.rs"

[[bin]]
name = "ppg"
path = "src/main.rs"


[dependencies]
rand = "0.7.3"


